k3s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medical-app
  template:
    metadata:
      labels:
        app: medical-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: webserver
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
      - name: tmp-volume
        emptyDir: {}
