k3s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-app
  namespace: app
  labels:
    app: medical-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: medical-app
  type: ClusterIP
